--- a/src/content/blog/prompt-engineering/slide-deck-slides.mdx
+++ b/src/content/blog/prompt-engineering/slide-deck-slides.mdx
@@ -9,14 +9,12 @@ series: "Prompt Engineering Mastery"
 draft: false
 ---
 
-import RevealSlides from '../../../components/RevealSlides.jsx';
-import slides from './slide-deck.md?raw';
 
-# Prompt Engineering: Slides (Embedded)
 
-Below is the slide deck rendered inline. Use arrow keys to navigate.
+# Prompt Engineering: Slides
 
-<RevealSlides client:load markdown={slides} height="80vh" />
+The inline embed has been removed. You can view the slide deck as a standalone page here:
 
-> Tip: Open the original article for full text, or view the deck in fullscreen using your browser zoom.
+- View slides: /blog/prompt-engineering/slide-deck/
 
+> Tip: Open the original article for full text, or view the deck in fullscreen in your browser.
